_rendered/apps/traefik-external/networking_k8s_io-ingressclass-traefik-external.yaml
# Source: traefik-external/charts/traefik/templates/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  annotations:
    ingressclass.kubernetes.io/is-default-class: "false"
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-external-traefik-external
    helm.sh/chart: traefik-41.1.0
    app.kubernetes.io/managed-by: Helm
  name: traefik-external
spec:
  controller: traefik.io/ingress-controller
