_rendered/apps/traefik-external/apps-deployment-traefik-external-traefik-external.yaml
# Source: traefik-external/charts/traefik/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-external
  namespace: traefik-external
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-external-traefik-external
    helm.sh/chart: traefik-41.1.0
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/instance: traefik-external-traefik-external
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  minReadySeconds: 0
  
  template: 
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9100"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: traefik-external-traefik-external
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: traefik
        custom.network/external-ingress: egress
        helm.sh/chart: traefik-41.1.0
    spec:
      automountServiceAccountToken: true
      containers:
      - args:
        - --global.checkNewVersion=false
        - --entryPoints.metrics.address=:9100/tcp
        - --entryPoints.traefik.address=:8080/tcp
        - --entryPoints.web.address=:8000/tcp
        - --entryPoints.websecure.address=:8443/tcp
        - --api.dashboard=true
        - --api.insecure=true
        - --ping=true
        - --metrics.prometheus=true
        - --metrics.prometheus.entrypoint=metrics
        - --experimental.plugins.crowdsec-bouncer-traefik-plugin.moduleName=github.com/maxlerebourg/crowdsec-bouncer-traefik-plugin
        - --experimental.plugins.crowdsec-bouncer-traefik-plugin.version=v1.5.1
        - --experimental.plugins.geoblock.moduleName=github.com/PascalMinder/geoblock
        - --experimental.plugins.geoblock.version=v0.3.7
        - --providers.kubernetescrd
        - --providers.kubernetescrd.allowEmptyServices=true
        - --providers.kubernetesingress
        - --providers.kubernetesingress.allowEmptyServices=true
        - --providers.kubernetesingress.ingressendpoint.publishedservice=traefik-external/traefik-external
        - --providers.kubernetesingress.ingressClass=traefik-external
        - --entryPoints.web.http.middlewares=traefik-common-rate-limit@kubernetescrd,traefik-common-crowdsec-bouncer@kubernetescrd,traefik-common-region-allowlist@kubernetescrd,traefik-common-security-headers@kubernetescrd
        - --entryPoints.websecure.http.middlewares=traefik-common-rate-limit@kubernetescrd,traefik-common-crowdsec-bouncer@kubernetescrd,traefik-common-region-allowlist@kubernetescrd,traefik-common-security-headers@kubernetescrd
        - --entryPoints.websecure.http.tls=true
        - --log.format=json
        - --log.level=INFO
        - --accesslog=true
        - --accesslog.format=json
        - --accesslog.fields.defaultmode=keep
        - --accesslog.fields.headers.defaultmode=drop
        image: docker.io/traefik:v3.7.9
        imagePullPolicy: IfNotPresent
        lifecycle: null
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        name: traefik-external
        ports:
        - containerPort: 9100
          name: metrics
          protocol: TCP
        - containerPort: 8080
          name: traefik
          protocol: TCP
        - containerPort: 8000
          name: web
          protocol: TCP
        - containerPort: 8443
          name: websecure
          protocol: TCP
        readinessProbe:
          failureThreshold: 1
          httpGet:
            path: /ping
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 2
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        resources: null
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /tmp
          name: tmp
        - mountPath: /mnt/crowdsec
          name: crowdsec-bouncer-key
          readOnly: true
        - mountPath: /plugins-storage
          name: plugins
      hostNetwork: false
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: traefik-external
      terminationGracePeriodSeconds: 60
      volumes:
      - emptyDir: {}
        name: data
      - emptyDir: {}
        name: tmp
      - name: crowdsec-bouncer-key
        secret:
          secretName: crowdsec-bouncer-key
      - emptyDir: {}
        name: plugins
