_rendered/apps/traefik-external/cilium_io-ciliumnetworkpolicy-traefik-external-preset-cnp.yaml
# Source: traefik-external/charts/networkpolicy/templates/networkpolicy-preset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  
  name: traefik-external-preset-cnp
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - {}
    - fromCIDR:
        - 10.0.0.0/20
        - fda0:f54f:5876::/48
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik
    - 
      fromEntities:
      - world
      toPorts:
      - ports:
        - port: "8000"
          protocol: TCP
        - port: "8443"
          protocol: TCP
    - 
      fromEndpoints:
      - matchLabels:
          io.kubernetes.pod.namespace: cert-manager
      toPorts:
      - ports:
        - port: "8000"
          protocol: TCP
        rules:
          http:
          - method: GET
            path: ^/.well-known/acme-challenge/.*
  egress:
    - toEndpoints:
        - {}
    - toEntities:
        - kube-apiserver
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toFQDNs:
        - matchName: "plugins.traefik.io"
        - matchName: "get.geojs.io"
    - toEndpoints:
        - matchLabels:
            custom.network/external-ingress: "ingress"
          matchExpressions:
            - key: io.kubernetes.pod.namespace
              operator: Exists
